--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,9 @@ android {
     }
 
 
-//    viewBinding {
-//        enabled = true
-//    }
+    viewBinding {
+        enabled = true
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
